--- a/src/commentMacro/CommentM.fxml
+++ b/src/commentMacro/CommentM.fxml
@@ -13,19 +13,20 @@
       <Pane prefHeight="300.0" prefWidth="400.0">
          <children>
             <TextField fx:id="adminId" layoutX="200.0" layoutY="14.0" prefWidth="190.0" />
-            <TextField fx:id="urlInput" layoutX="200.0" layoutY="150.0" prefWidth="190.0" />
+            <TextField fx:id="urlInput" layoutX="200.0" layoutY="81.0" prefWidth="190.0" />
             <Label layoutX="14.0" layoutY="18.0" text="관리자 ID" />
             <Label layoutX="14.0" layoutY="52.0" text="관리자 PW" />
             <PasswordField fx:id="adminPw" layoutX="200.0" layoutY="48.0" prefHeight="23.0" prefWidth="190.0" />
-            <Label layoutX="14.0" layoutY="85.0" text="언옵 경기 갯수" />
-            <Label layoutX="14.0" layoutY="119.0" text="승무패 경기 갯수" />
-            <Label layoutX="14.0" layoutY="154.0" text="댓글 URL" />
-            <Button layoutX="71.0" layoutY="245.0" mnemonicParsing="false" text="경우의 수 생성" />
-            <Button layoutX="177.0" layoutY="245.0" mnemonicParsing="false" text="언옵 댓글 달기" />
-            <Button layoutX="282.0" layoutY="245.0" mnemonicParsing="false" text="승무패 댓글 달기" />
-            <Button layoutX="12.0" layoutY="245.0" mnemonicParsing="false" text="로그인" />
-            <Slider fx:id="numberOfUO" blockIncrement="1.0" layoutX="200.0" layoutY="86.0" majorTickUnit="1.0" max="10.0" minorTickCount="1" prefHeight="14.0" prefWidth="190.0" showTickLabels="true" />
-            <Slider fx:id="numberOfVTD" blockIncrement="1.0" layoutX="200.0" layoutY="120.0" majorTickUnit="1.0" max="10.0" minorTickCount="1" prefHeight="14.0" prefWidth="190.0" showTickLabels="true" />
+            <Label layoutX="14.0" layoutY="85.0" text="댓글 URL" />
+            <Button fx:id="createBtn" layoutX="70.0" layoutY="210.0" mnemonicParsing="false" onMouseClicked="#makePerm" text="경우의 수 생성" />
+            <Button fx:id="commentUOBtn" layoutX="176.0" layoutY="210.0" mnemonicParsing="false" text="언옵 댓글 달기" />
+            <Button fx:id="commentVTDBtn" layoutX="281.0" layoutY="210.0" mnemonicParsing="false" text="승무패 댓글 달기" />
+            <Button fx:id="loginBtn" layoutX="11.0" layoutY="210.0" mnemonicParsing="false" text="로그인" />
+            <Button fx:id="exit" layoutX="281.0" layoutY="247.0" mnemonicParsing="false" onMouseClicked="#exit" prefHeight="46.0" prefWidth="108.0" text="Exit" />
+            <Label layoutX="14.0" layoutY="117.0" text="언옵 경기 갯수" />
+            <Label layoutX="14.0" layoutY="162.0" text="승무패 경기 갯수" />
+            <Slider fx:id="numberOfUO" blockIncrement="1.0" layoutX="200.0" layoutY="118.0" majorTickUnit="1.0" max="10.0" minorTickCount="0" prefHeight="14.0" prefWidth="190.0" showTickLabels="true" snapToTicks="true" />
+            <Slider fx:id="numberOfVTD" blockIncrement="1.0" layoutX="200.0" layoutY="163.0" majorTickUnit="1.0" max="10.0" minorTickCount="0" prefHeight="14.0" prefWidth="190.0" showTickLabels="true" snapToTicks="true" />
          </children>
       </Pane>
    </children>
