--- a/src/commentMacro/CommentM.fxml
+++ b/src/commentMacro/CommentM.fxml
@@ -18,15 +18,15 @@
             <Label layoutX="14.0" layoutY="52.0" text="관리자 PW" />
             <PasswordField fx:id="adminPw" layoutX="200.0" layoutY="48.0" prefHeight="23.0" prefWidth="190.0" />
             <Label layoutX="14.0" layoutY="85.0" text="댓글 URL" />
-            <Button fx:id="createBtn" layoutX="70.0" layoutY="210.0" mnemonicParsing="false" onMouseClicked="#makePerm" text="경우의 수 생성" />
+            <Button fx:id="createBtn" layoutX="70.0" layoutY="210.0" mnemonicParsing="false" onMouseClicked="#makePermThread" text="경우의 수 생성" />
             <Button fx:id="commentUOBtn" layoutX="176.0" layoutY="210.0" mnemonicParsing="false" text="언옵 댓글 달기" />
             <Button fx:id="commentVTDBtn" layoutX="281.0" layoutY="210.0" mnemonicParsing="false" text="승무패 댓글 달기" />
             <Button fx:id="loginBtn" layoutX="11.0" layoutY="210.0" mnemonicParsing="false" onMouseClicked="#adminLogin" text="로그인" />
             <Button fx:id="exit" layoutX="281.0" layoutY="247.0" mnemonicParsing="false" onMouseClicked="#exit" prefHeight="46.0" prefWidth="108.0" text="Exit" />
             <Label layoutX="14.0" layoutY="117.0" text="언옵 경기 갯수" />
             <Label layoutX="14.0" layoutY="162.0" text="승무패 경기 갯수" />
-            <Slider fx:id="numberOfUO" blockIncrement="1.0" layoutX="200.0" layoutY="118.0" majorTickUnit="1.0" max="8.0" minorTickCount="0" onDragDone="#setUOVal" prefHeight="14.0" prefWidth="190.0" showTickLabels="true" snapToTicks="true" />
-            <Slider fx:id="numberOfVTD" blockIncrement="1.0" layoutX="200.0" layoutY="163.0" majorTickUnit="1.0" max="8.0" minorTickCount="0" onDragDone="#setVTDVal" prefHeight="14.0" prefWidth="190.0" showTickLabels="true" snapToTicks="true" />
+            <Slider fx:id="numberOfUO" blockIncrement="1.0" layoutX="200.0" layoutY="118.0" majorTickUnit="1.0" max="8.0" minorTickCount="0" prefHeight="14.0" prefWidth="190.0" showTickLabels="true" snapToTicks="true" />
+            <Slider fx:id="numberOfVTD" blockIncrement="1.0" layoutX="200.0" layoutY="163.0" majorTickUnit="1.0" max="8.0" minorTickCount="0" prefHeight="14.0" prefWidth="190.0" showTickLabels="true" snapToTicks="true" />
          </children>
       </Pane>
    </children>
