--- a/src/commentMacro/CommentM.fxml
+++ b/src/commentMacro/CommentM.fxml
@@ -12,21 +12,28 @@
    <children>
       <Pane prefHeight="300.0" prefWidth="400.0">
          <children>
-            <TextField fx:id="adminId" layoutX="200.0" layoutY="14.0" prefWidth="190.0" />
-            <TextField fx:id="urlInput" layoutX="200.0" layoutY="81.0" prefWidth="190.0" />
+            <TextField fx:id="adminIdInput" layoutX="81.0" layoutY="14.0" prefHeight="23.0" prefWidth="108.0" />
+            <TextField fx:id="urlInput" layoutX="198.0" layoutY="44.0" prefWidth="190.0" />
             <Label layoutX="14.0" layoutY="18.0" text="관리자 ID" />
-            <Label layoutX="14.0" layoutY="52.0" text="관리자 PW" />
-            <PasswordField fx:id="adminPw" layoutX="200.0" layoutY="48.0" prefHeight="23.0" prefWidth="190.0" />
-            <Label layoutX="14.0" layoutY="85.0" text="댓글 URL" />
-            <Button fx:id="createBtn" layoutX="70.0" layoutY="210.0" mnemonicParsing="false" onMouseClicked="#makePerm" text="경우의 수 생성" />
-            <Button fx:id="commentUOBtn" layoutX="176.0" layoutY="210.0" mnemonicParsing="false" text="언옵 댓글 달기" />
-            <Button fx:id="commentVTDBtn" layoutX="281.0" layoutY="210.0" mnemonicParsing="false" text="승무패 댓글 달기" />
-            <Button fx:id="loginBtn" layoutX="11.0" layoutY="210.0" mnemonicParsing="false" onMouseClicked="#adminLogin" text="로그인" />
-            <Button fx:id="exit" layoutX="281.0" layoutY="247.0" mnemonicParsing="false" onMouseClicked="#exit" prefHeight="46.0" prefWidth="108.0" text="Exit" />
-            <Label layoutX="14.0" layoutY="117.0" text="언옵 경기 갯수" />
-            <Label layoutX="14.0" layoutY="162.0" text="승무패 경기 갯수" />
-            <Slider fx:id="numberOfUO" blockIncrement="1.0" layoutX="200.0" layoutY="118.0" majorTickUnit="1.0" max="8.0" minorTickCount="0" prefHeight="14.0" prefWidth="190.0" showTickLabels="true" snapToTicks="true" />
-            <Slider fx:id="numberOfVTD" blockIncrement="1.0" layoutX="200.0" layoutY="163.0" majorTickUnit="1.0" max="8.0" minorTickCount="0" prefHeight="14.0" prefWidth="190.0" showTickLabels="true" snapToTicks="true" />
+            <Label layoutX="195.0" layoutY="18.0" text="관리자 PW" />
+            <PasswordField fx:id="adminPwInput" layoutX="282.0" layoutY="14.0" prefHeight="23.0" prefWidth="108.0" />
+            <Label layoutX="12.0" layoutY="48.0" text="댓글 URL" />
+            <Button fx:id="createBtn" layoutX="71.0" layoutY="259.0" mnemonicParsing="false" onMouseClicked="#makePerm" text="경우의 수 생성" />
+            <Button layoutX="176.0" layoutY="259.0" mnemonicParsing="false" onMouseClicked="#commentUo" text="언옵 댓글 달기" />
+            <Button layoutX="281.0" layoutY="228.0" mnemonicParsing="false" onMouseClicked="#commentVtd" text="승무패 댓글 달기" />
+            <Button fx:id="loginBtn" layoutX="13.0" layoutY="259.0" mnemonicParsing="false" onMouseClicked="#adminLogin" text="로그인" />
+            <Button fx:id="exitBtn" layoutX="281.0" layoutY="259.0" mnemonicParsing="false" onMouseClicked="#exit" prefHeight="23.0" prefWidth="108.0" text="Exit" />
+            <Label layoutX="12.0" layoutY="80.0" text="언옵 경기 갯수" />
+            <Label layoutX="12.0" layoutY="125.0" text="승무패 경기 갯수" />
+            <Slider fx:id="uoSlider" blockIncrement="1.0" layoutX="198.0" layoutY="81.0" majorTickUnit="1.0" max="8.0" minorTickCount="0" prefHeight="14.0" prefWidth="190.0" showTickLabels="true" snapToTicks="true" />
+            <Slider fx:id="vtdSlider" blockIncrement="1.0" layoutX="198.0" layoutY="126.0" majorTickUnit="1.0" max="8.0" minorTickCount="0" prefHeight="14.0" prefWidth="190.0" showTickLabels="true" snapToTicks="true" />
+            <Label layoutX="12.0" layoutY="165.0" text="생성된 경기 수" />
+            <Label layoutX="129.0" layoutY="158.0" text="언옵 : " />
+            <Label layoutX="117.0" layoutY="180.0" text="승무패 : " />
+            <Label fx:id="uoProbLabel" layoutX="208.0" layoutY="158.0" text="0" textAlignment="CENTER" textFill="RED" />
+            <Label fx:id="vtdProbLabel" layoutX="208.0" layoutY="180.0" text="0" textAlignment="CENTER" textFill="RED" />
+            <TextField fx:id="uoInput" alignment="CENTER" layoutX="252.0" layoutY="154.0" prefHeight="23.0" prefWidth="133.0" promptText="작성할 언옵 갯수" />
+            <TextField fx:id="vtdInput" alignment="CENTER" layoutX="252.0" layoutY="176.0" prefHeight="23.0" prefWidth="133.0" promptText="작성할 승무패 갯수" />
          </children>
       </Pane>
    </children>
